// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress measure location inside 1`] = `
<Progress
  className=""
  id="inside-progress"
  label={null}
  max={100}
  measureLocation="inside"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="inside-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="inside"
      parentId="inside-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "inside-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="inside-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      />
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "inside-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="inside-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            >
              33%
            </span>
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location inside and small should render large 1`] = `
<Progress
  className=""
  id="large-progress"
  label={null}
  max={100}
  measureLocation="inside"
  min={0}
  size="sm"
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="large-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="inside"
      parentId="large-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "large-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="large-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      />
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "large-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="large-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            >
              33%
            </span>
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location none 1`] = `
<Progress
  className=""
  id="none-progress"
  label={null}
  max={100}
  measureLocation="none"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="none-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="none"
      parentId="none-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "none-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="none-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      />
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "none-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="none-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location outside 1`] = `
<Progress
  className=""
  id="outside-progress"
  label={null}
  max={100}
  measureLocation="outside"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-outside pf-m-singleline"
    id="outside-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="outside"
      parentId="outside-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "outside-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="outside-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "outside-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="outside-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress measure location top 1`] = `
<Progress
  className=""
  id="top-progress"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="top-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="top-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "top-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="top-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "top-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="top-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress size lg 1`] = `
<Progress
  className=""
  id="lg-progress"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size="lg"
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-lg pf-m-singleline"
    id="lg-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="lg-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "lg-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="lg-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "lg-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="lg-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress size md 1`] = `
<Progress
  className=""
  id="md-progress"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size="md"
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="md-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="md-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "md-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="md-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "md-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="md-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress size sm 1`] = `
<Progress
  className=""
  id="sm-progress"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size="sm"
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-sm pf-m-singleline"
    id="sm-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="sm-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "sm-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="sm-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "sm-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="sm-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress variant danger 1`] = `
<Progress
  className=""
  id="danger-progress"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="danger"
>
  <div
    className="pf-c-progress pf-m-danger pf-m-singleline"
    id="danger-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="danger-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "danger-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant="danger"
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="danger-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
        <span
          className="pf-c-progress__status-icon"
        >
          <TimesCircleIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                transform=""
              />
            </svg>
          </TimesCircleIcon>
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "danger-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="danger-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress variant success 1`] = `
<Progress
  className=""
  id="success-progress"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant="success"
>
  <div
    className="pf-c-progress pf-m-success pf-m-singleline"
    id="success-progress"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="success-progress"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "success-progress-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant="success"
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="success-progress-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
        <span
          className="pf-c-progress__status-icon"
        >
          <CheckCircleIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                transform=""
              />
            </svg>
          </CheckCircleIcon>
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "success-progress-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="success-progress-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Progress with aria-valuetext 1`] = `
<Progress
  className=""
  id="progress-aria-valuetext"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText="Descriptive text here"
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="progress-aria-valuetext"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="progress-aria-valuetext"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "progress-aria-valuetext-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
          "aria-valuetext": "Descriptive text here",
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="progress-aria-valuetext-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "progress-aria-valuetext-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
            "aria-valuetext": "Descriptive text here",
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="progress-aria-valuetext-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          aria-valuetext="Descriptive text here"
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`Simple progress 1`] = `
<Progress
  className=""
  id="progress-simple-example"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="progress-simple-example"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="progress-simple-example"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "progress-simple-example-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="progress-simple-example-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          33%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "progress-simple-example-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="progress-simple-example-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`additional label 1`] = `
<Progress
  className=""
  id="additional-label"
  label="Additional label"
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="additional-label"
  >
    <ProgressContainer
      label="Additional label"
      measureLocation="top"
      parentId="additional-label"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "additional-label-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={33}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="additional-label-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          Additional label
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "additional-label-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={33}
      >
        <div
          aria-labelledby="additional-label-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "33%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`no value specified 1`] = `
<Progress
  className=""
  id="no-value"
  label={null}
  max={100}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={0}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="no-value"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="no-value"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "no-value-description",
          "aria-valuemax": 100,
          "aria-valuemin": 0,
          "aria-valuenow": 0,
        }
      }
      title=""
      value={0}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="no-value-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          0%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "no-value-description",
            "aria-valuemax": 100,
            "aria-valuemin": 0,
            "aria-valuenow": 0,
          }
        }
        role="progressbar"
        value={0}
      >
        <div
          aria-labelledby="no-value-description"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "0%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value higher than maxValue 1`] = `
<Progress
  className=""
  id="higher-max-value"
  label={null}
  max={60}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={77}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="higher-max-value"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="higher-max-value"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "higher-max-value-description",
          "aria-valuemax": 60,
          "aria-valuemin": 0,
          "aria-valuenow": 77,
        }
      }
      title=""
      value={100}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="higher-max-value-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          100%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "higher-max-value-description",
            "aria-valuemax": 60,
            "aria-valuemin": 0,
            "aria-valuenow": 77,
          }
        }
        role="progressbar"
        value={100}
      >
        <div
          aria-labelledby="higher-max-value-description"
          aria-valuemax={60}
          aria-valuemin={0}
          aria-valuenow={77}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value lower than minValue 1`] = `
<Progress
  className=""
  id="lower-min-value"
  label={null}
  max={100}
  measureLocation="top"
  min={40}
  size={null}
  title=""
  value={33}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="lower-min-value"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="lower-min-value"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "lower-min-value-description",
          "aria-valuemax": 100,
          "aria-valuemin": 40,
          "aria-valuenow": 33,
        }
      }
      title=""
      value={0}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="lower-min-value-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          0%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "lower-min-value-description",
            "aria-valuemax": 100,
            "aria-valuemin": 40,
            "aria-valuenow": 33,
          }
        }
        role="progressbar"
        value={0}
      >
        <div
          aria-labelledby="lower-min-value-description"
          aria-valuemax={100}
          aria-valuemin={40}
          aria-valuenow={33}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "0%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value scaled between minValue and maxValue 1`] = `
<Progress
  className=""
  id="scaled-range-value"
  label={null}
  max={80}
  measureLocation="top"
  min={10}
  size={null}
  title=""
  value={50}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="scaled-range-value"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="scaled-range-value"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "scaled-range-value-description",
          "aria-valuemax": 80,
          "aria-valuemin": 10,
          "aria-valuenow": 50,
        }
      }
      title=""
      value={57}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="scaled-range-value-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          57%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "scaled-range-value-description",
            "aria-valuemax": 80,
            "aria-valuemin": 10,
            "aria-valuenow": 50,
          }
        }
        role="progressbar"
        value={57}
      >
        <div
          aria-labelledby="scaled-range-value-description"
          aria-valuemax={80}
          aria-valuemin={10}
          aria-valuenow={50}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "57%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value scaled with maxValue 1`] = `
<Progress
  className=""
  id="scaled-max-value"
  label={null}
  max={80}
  measureLocation="top"
  min={0}
  size={null}
  title=""
  value={50}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="scaled-max-value"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="scaled-max-value"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "scaled-max-value-description",
          "aria-valuemax": 80,
          "aria-valuemin": 0,
          "aria-valuenow": 50,
        }
      }
      title=""
      value={62}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="scaled-max-value-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          62%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "scaled-max-value-description",
            "aria-valuemax": 80,
            "aria-valuemin": 0,
            "aria-valuenow": 50,
          }
        }
        role="progressbar"
        value={62}
      >
        <div
          aria-labelledby="scaled-max-value-description"
          aria-valuemax={80}
          aria-valuemin={0}
          aria-valuenow={50}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "62%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;

exports[`value scaled with minValue 1`] = `
<Progress
  className=""
  id="scaled-min-value"
  label={null}
  max={100}
  measureLocation="top"
  min={10}
  size={null}
  title=""
  value={50}
  valueText={null}
  variant={null}
>
  <div
    className="pf-c-progress pf-m-singleline"
    id="scaled-min-value"
  >
    <ProgressContainer
      label={null}
      measureLocation="top"
      parentId="scaled-min-value"
      progressBarAriaProps={
        Object {
          "aria-labelledby": "scaled-min-value-description",
          "aria-valuemax": 100,
          "aria-valuemin": 10,
          "aria-valuenow": 50,
        }
      }
      title=""
      value={44}
      variant={null}
    >
      <div
        aria-hidden="true"
        className="pf-c-progress__description"
        id="scaled-min-value-description"
      />
      <div
        aria-hidden="true"
        className="pf-c-progress__status"
      >
        <span
          className="pf-c-progress__measure"
        >
          44%
        </span>
      </div>
      <ProgressBar
        progressBarAriaProps={
          Object {
            "aria-labelledby": "scaled-min-value-description",
            "aria-valuemax": 100,
            "aria-valuemin": 10,
            "aria-valuenow": 50,
          }
        }
        role="progressbar"
        value={44}
      >
        <div
          aria-labelledby="scaled-min-value-description"
          aria-valuemax={100}
          aria-valuemin={10}
          aria-valuenow={50}
          className="pf-c-progress__bar"
          role="progressbar"
        >
          <div
            className="pf-c-progress__indicator"
            style={
              Object {
                "width": "44%",
              }
            }
          >
            <span
              className="pf-c-progress__measure"
            />
          </div>
        </div>
      </ProgressBar>
    </ProgressContainer>
  </div>
</Progress>
`;
